# bones-cpp

./: .gitignore  CMakeLists.txt  macbuild.sh  main.cpp  package-lock.json  readme.md  utils.cmake
lib/d3d11_backend/: CMakeLists.txt
lib/d3d11_backend/include/: BnsDirectX11.hpp  D3D11Util.hpp
lib/d3d11_backend/include/renderer/: D3D11Renderer.hpp
lib/d3d11_backend/include/sprite/: D3D11UnlitSpritePipeline.hpp  D3D11UnlitSpriteRenderer.hpp
lib/d3d11_backend/include/texture/: D3D11Texture2D.hpp
lib/d3d11_backend/include/util/: D3D11BlendStateUtil.hpp  D3D11BlobUtil.hpp  D3D11BufferUtil.hpp  D3D11ShaderUtil.hpp
lib/d3d11_backend/src/: D3D11Renderer.cpp  main.cpp
lib/d3d11_backend/src/renderer/: D3D11Renderer.cpp
lib/d3d11_backend/src/sprite/: D3D11UnlitSpritePipeline.cpp  D3D11UnlitSpriteRenderer.cpp
lib/d3d11_backend/src/texture/: D3D11Texture2D.cpp
lib/d3d11_backend/src/util/: D3D11BlendStateUtil.cpp  D3D11BlobUtil.cpp  D3D11BufferUtil.cpp  D3D11ShaderUtil.cpp
lib/loaders/: CMakeLists.txt
lib/loaders/include/: FileLoader.hpp  ImageData.hpp  ImageLoader.hpp
lib/loaders/src/: FileLoader.cpp  ImageData.cpp  ImageLoader.cpp
lib/metal_backend/: CMakeLists.txt
lib/metal_backend/include/: BnsMetal.hpp  MetalUtil.hpp  bns_metal.hpp  bns_metal_util.hpp
lib/metal_backend/include/buffers/: bns_metal_index_buffer.hpp  bns_metal_instance_buffer.hpp  bns_metal_uniform_buffer.hpp  bns_metal_vertex_buffer.hpp
lib/metal_backend/include/camera/: bns_metal_perspective_camera.hpp
lib/metal_backend/include/pipelines/: bns_metal_unlit_render_pipeline.hpp
lib/metal_backend/include/renderer/: MetalRenderer.hpp  bns_metal_renderer.hpp
lib/metal_backend/include/sprite/: MetalUnlitSpritePipeline.hpp  MetalUnlitSpriteRenderer.hpp  bns_metal_unlit_sprite_pipeline.hpp  bns_metal_unlit_sprite_renderer.hpp
lib/metal_backend/include/texture/: MetalTexture2D.hpp  bns_metal_texture2d.hpp
lib/metal_backend/include/util/: MetalBufferUtil.hpp  MetalLibraryUtil.hpp  MetalRenderPipelineColorAttachmentDescriptorUtil.hpp  MetalRenderPipelineDescriptorUtil.hpp  MetalVertexBufferLayoutUtil.hpp  bns_metal_buffer_util.hpp  bns_metal_converter.hpp  bns_metal_library_util.hpp  bns_metal_render_pipeline_state_util.hpp
lib/metal_backend/src/buffers/: bns_metal_index_buffer.cpp  bns_metal_vertex_buffer.cpp
lib/metal_backend/src/camera/: bns_metal_perspective_camera.cpp
lib/metal_backend/src/pipelines/: bns_metal_unlit_render_pipeline.cpp
lib/metal_backend/src/renderer/: MetalRenderer.cpp  bns_metal_renderer.cpp
lib/metal_backend/src/sprite/: MetalUnlitSpritePipeline.cpp  MetalUnlitSpriteRenderer.cpp
lib/metal_backend/src/texture/: MetalTexture2D.cpp  bns_metal_texture2d.cpp
lib/metal_backend/src/util/: MetalLibraryUtil.cpp  MetalRenderPipelineColorAttachmentDescriptorUtil.cpp  MetalRenderPipelineDescriptorUtil.cpp  MetalVertexBufferLayoutUtil.cpp  bns_metal_buffer_util.cpp  bns_metal_converter.cpp  bns_metal_library_util.cpp  bns_metal_render_pipeline_state_util.cpp
lib/opengl_backend/: CMakeLists.txt
lib/opengl_backend/include/: BnsOpenGL.hpp  OpenGLUtil.hpp  bns_opengl_util.hpp
lib/opengl_backend/include/buffers/: bns_opengl_index_buffer.hpp  bns_opengl_instance_buffer.hpp  bns_opengl_uniform_buffer.hpp  bns_opengl_vertex_buffer.hpp
lib/opengl_backend/include/camera/: bns_opengl_perspective_camera.hpp
lib/opengl_backend/include/pipelines/: bns_opengl_unlit_render_pipeline.hpp
lib/opengl_backend/include/renderer/: OpenGLRenderer.hpp  bns_opengl_renderer.hpp
lib/opengl_backend/include/sprite/: OpenGLUnlitSpritePipeline.hpp  OpenGLUnlitSpriteRenderer.hpp
lib/opengl_backend/include/texture/: OpenGLTexture2D.hpp  bns_opengl_texture2d.hpp
lib/opengl_backend/include/util/: OpenGLBufferUtil.hpp  OpenGLProgramUtil.hpp  OpenGLShaderUtil.hpp  OpenGLVAOUtil.hpp  bns_opengl_buffer_util.hpp  bns_opengl_converter.hpp  bns_opengl_shader_util.hpp  bns_opengl_texture_util.hpp  bns_opengl_vertex_array_object_util.hpp
lib/opengl_backend/src/buffers/: bns_opengl_index_buffer.cpp  bns_opengl_vertex_buffer.cpp
lib/opengl_backend/src/camera/: bns_opengl_perspective_camera.cpp
lib/opengl_backend/src/pipelines/: bns_opengl_unlit_render_pipeline.cpp
lib/opengl_backend/src/renderer/: OpenGLRenderer.cpp  bns_opengl_renderer.cpp
lib/opengl_backend/src/sprite/: OpenGLUnlitSpritePipeline.cpp  OpenGLUnlitSpriteRenderer.cpp
lib/opengl_backend/src/texture/: OpenGLTexture2D.cpp  Texture2D.cpp  bns_opengl_texture2d.cpp
lib/opengl_backend/src/util/: OpenGLBufferUtil.cpp  OpenGLProgramUtil.cpp  OpenGLShaderUtil.cpp  OpenGLVAOUtil.cpp  bns_opengl_buffer_util.cpp  bns_opengl_converter.cpp  bns_opengl_shader_util.cpp  bns_opengl_texture_util.cpp  bns_opengl_vertex_array_object_util.cpp
lib/opengles_backend/: CMakeLists.txt
lib/opengles_backend/include/: BnsOpenGLES.hpp  OpenGLESUtil.hpp
lib/opengles_backend/include/renderer/: OpenGLESRenderer.hpp
lib/opengles_backend/include/sprite/: OpenGLESUnlitSpritePipeline.hpp  OpenGLESUnlitSpriteRenderer.hpp
lib/opengles_backend/include/texture/: OpenGLESTexture2D.hpp
lib/opengles_backend/include/util/: OpenGLESBufferUtil.hpp  OpenGLESProgramUtil.hpp  OpenGLESShaderUtil.hpp  OpenGLESVAOUtil.hpp
lib/opengles_backend/src/renderer/: OpenGLESRenderer.cpp
lib/opengles_backend/src/sprite/: OpenGLESUnlitSpritePipeline.cpp  OpenGLESUnlitSpriteRenderer.cpp
lib/opengles_backend/src/util/: OpenGLESBufferUtil.cpp  (+3 more)
lib/rendering_backend/: CMakeLists.txt
lib/rendering_backend/include/: RenderingBackendTypes.hpp
lib/sdl_window/: CMakeLists.txt
lib/sdl_window/include/: SDLWindow.hpp
lib/sdl_window/src/: SDLWindow.cpp
lib/texture/: CMakeLists.txt
lib/texture/include/: TextureManager.hpp
lib/texture/src/: Texture2D.cpp  TextureManager.cpp
lib/vulkan_backend/: CMakeLists.txt
lib/vulkan_backend/include/: BnsVulkan.hpp  VulkanUtil.hpp
lib/webgpu_backend/: CMakeLists.txt
lib/webgpu_backend/include/: WebGPUUtil.hpp  bns_webgpu_util.hpp
lib/window/: CMakeLists.txt
lib/window/include/: Window.hpp
lib/window/src/: Window.cpp
(+554 files in other folders)
